Fixed Spacing

--- a/src/style.css
+++ b/src/style.css
@@ -2483,10 +2483,6 @@ html {
   margin-bottom: 2rem;
 }
 
-#sidebar .rules-counter {
-  margin-bottom: 16px;
-}
-
 #sidebar {
   text-align: center;
 }
